--- a/styles.css
+++ b/styles.css
@@ -753,5 +753,14 @@ body {
 
 
   }
+
+  .nested-delete {
+    display: none;
+    transition: transform 0.2s ease, opacity 0.2s ease;
+}
+
+.nested-template.swipe-left .nested-delete {
+    display: inline-block;
+}
 }
 
