--- a/styles.css
+++ b/styles.css
@@ -754,13 +754,13 @@ body {
 
   }
 
-  .nested-delete {
+.nested-delete {
     display: none;
     transition: transform 0.2s ease, opacity 0.2s ease;
 }
 
-.nested-template.swipe-left .nested-delete {
+.nested-template.swiped .nested-delete {
     display: inline-block;
 }
-}
 
+}
