--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,9 @@ h2, h3 {
   margin-bottom: 1rem;
 }
 
+.hidden {
+  display: none !important;
+}
 /* =========================
    Template & Folder Grids
    ========================= */
